perfected video code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download excursion (coming soon!)</a></p>
-    <video src="videos/excursion.mp4" autoplay loop>
-      
+    <video>
+      <source src="videos/excursion.mp4" autoplay loop type="videos/mp4">
     </video>
   </body>
 </html>
