--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download excursion (coming soon!)</a></p>
     <video>
-      <source src="videos/excursion.mp4" autoplay loop type="videos/mp4">
+      <source src="videos/excursion.mp4" autoplay loop type="video/mp4">
     </video>
   </body>
 </html>
