--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download excursion (coming soon!)</a></p>
-    <video>
-      <source src="videos/excursion.mp4" autoplay loop type="video/mp4">
+    <video autoplay loop>
+      <source src="videos/excursion.mp4" type="video/mp4">
     </video>
   </body>
 </html>
