--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p><a href="#">Download excursion (coming soon!)</a></p>
     <video autoplay loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="image not supported">
+      
     </video>
   </body>
 </html>
