--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title></title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download excursion (coming soon!)</a></p>
+    <h1 class="spes">Discover hidden places in the world around you</h1>
+    <p class="link"><a href="#">Download excursion (coming soon!)</a></p>
     <video autoplay loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
@@ -16,7 +16,7 @@
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="image not supported">
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iamge not supported">
     <h1>Coming soon for iPhone and Android</h1>
-    <p><a href="#">Download excursion (coming soon!)</a></p>
+    <p class="link"><a href="#">Download excursion (coming soon!)</a></p>
     <h3>© Excursion</h3>
   </body>
 </html>
