--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <video autoplay loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
-    <h1>Your personal travel guide</h1>
+    <h1 class="typ">Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="image not supported">
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iamge not supported">
-    <h1>Coming soon for iPhone and Android</h1>
+    <h1 class="typ">Coming soon for iPhone and Android</h1>
     <p class="link"><a href="#">Download excursion (coming soon!)</a></p>
     <h3>© Excursion</h3>
   </body>
