--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <h1 class="spes">Discover hidden places in the world around you</h1>
     <p class="link"><a href="#">Download excursion (coming soon!)</a></p>
-    <video autoplay loop>
-      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    <video autoplay muted loop src="resources/videos/excursion.mp4">
     </video>
     <h1 class="typ">Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
